ops/k8s/ingress/routing.local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /crypto(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: crypto-service
            port:
              number: 8080
